# subpar

./: CMakeLists.txt  README.md
.github/workflows/: check-install.yaml  doxygenate.yaml  run-tests.yaml
cmake/: Config.cmake.in
docs/: Doxyfile  dir_19300affb4624890cb6c7ae319e11cd6.html  doxygen_crawl.html  files.html  globals.html  globals_defs.html  index.html  ivdep_8hpp.html  ivdep_8hpp_source.html  menudata.js  namespacemembers.html  namespacemembers_func.html  namespaces.html  namespacesubpar.html  range_8hpp.html  range_8hpp_source.html  simple_8hpp.html  simple_8hpp_source.html  subpar.tag  subpar_8hpp.html  subpar_8hpp_source.html  vectorizable_8hpp.html  vectorizable_8hpp_source.html
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  defines_0.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  namespaces_0.js  pages_0.js  pages_1.js  pages_3.js  pages_4.js  searchdata.js
include/subpar/: defs.hpp  range.hpp  simple.hpp  subpar.hpp  test.hpp  vectorizable.hpp
tests/: CMakeLists.txt
tests/src/: parallelize.cpp  range.cpp  simple.cpp  test.cpp  vectorizable.cpp
